# pd-fftease

./: .gitignore  CHANGELOG.txt  CMakeLists.txt  LICENSE.txt  MSPd.h  Makefile  PenroseOscil.c  README.md  _porting notes.txt  bloscbank.c  bthresher~.c  bthresher~.pd_darwin  burrow~.c  burrow~.pd_darwin  cavoc27~.c  cavoc27~.pd_darwin  cavoc~-help.pd  cavoc~.c  cavoc~.pd_darwin  centerring~.c  centerring~.pd_darwin  codepend~.c  codepend~.pd_darwin  collect.pl  convert.c  cross~.c  cross~.pd_darwin  dentist~.c  dentist~.pd_darwin  disarrain~.c  disarrain~.pd_darwin  disarray~.c  drown~.c  enrich~.c  ether~.c  fft.c  fft4.c  fftease-meta.pd  fftease.h  fftease_utilities.c  (+40 more)
.github/workflows/: build-artifacts.yml
darwin_bin/: bthresher~.pd_darwin  burrow~.pd_darwin  cavoc27~.pd_darwin  cavoc~.pd_darwin  centerring~.pd_darwin  codepend~.pd_darwin  cross~.pd_darwin  dentist~.pd_darwin  disarrain~.pd_darwin  disarray~.pd_darwin  drown~.pd_darwin  enrich~.pd_darwin  ether~.pd_darwin  leaker~.pd_darwin  mindwarp~.pd_darwin  morphine~.pd_darwin  multyq~.pd_darwin  pileup~.pd_darwin  pvcompand~.pd_darwin  pvgrain~.pd_darwin  pvoc~.pd_darwin  pvtuner~.pd_darwin  pvwarpb~.pd_darwin  pvwarp~.pd_darwin  reanimator~.pd_darwin  resent~.pd_darwin  residency_buffer~.pd_darwin  residency~.pd_darwin  schmear~.pd_darwin  scrape~.pd_darwin  shapee~.pd_darwin  swinger~.pd_darwin  taint~.pd_darwin  thresher~.pd_darwin  vacancy~.pd_darwin  xsyn~.pd_darwin
fftease-helpfiles/: bthresher~-help.pd  burrow~-help.pd  cavoc27~-help.pd  cavoc~-help.pd  centerring~-help.pd  codepend~-help.pd  cross~-help.pd  dentist~-help.pd  disarrain~-help.pd  disarray~-help.pd  drown~-help.pd  enrich~-help.pd  ether~-help.pd  gain.dsp~.pd  icon.pd  leaker~-help.pd  loopsea~-help.pd  mindwarp~-help.pd  morphine~-help.pd  multyq~-help.pd  pileup~-help.pd  pvcompand~-help.pd  pvgrain~-help.pd  pvharm~-help.pd  pvoc~-help.pd  pvtuner~-help.pd  pvwarpb~-help.pd  pvwarp~-help.pd  reanimator~-help.pd  resent~-help.pd  residency_buffer~-help.pd  residency~-help.pd  schmear~-help.pd  scrape~-help.pd  sfplayer~.pd  shapee~-help.pd  smap-help.pd  swinger~-help.pd  taint~-help.pd  thresher~-help.pd  (+2 more)
fftease32-externals/: bthresher~.pd_darwin  burrow~.pd_darwin  cavoc27~.pd_darwin  cavoc~.pd_darwin  centerring~.pd_darwin  codepend~.pd_darwin  cross~.pd_darwin  dentist~.pd_darwin  disarrain~.pd_darwin  disarray~.pd_darwin  drown~.pd_darwin  enrich~.pd_darwin  ether~.pd_darwin  leaker~.pd_darwin  mindwarp~.pd_darwin  morphine~.pd_darwin  multyq~.pd_darwin  pileup~.pd_darwin  pvcompand~.pd_darwin  pvgrain~.pd_darwin  pvharm~.pd_darwin  pvoc~.pd_darwin  pvtuner~.pd_darwin  pvwarpb~.pd_darwin  pvwarp~.pd_darwin  reanimator~.pd_darwin  resent~.pd_darwin  residency_buffer~.pd_darwin  residency~.pd_darwin  schmear~.pd_darwin  scrape~.pd_darwin  shapee~.pd_darwin  swinger~.pd_darwin  taint~.pd_darwin  thresher~.pd_darwin  vacancy~.pd_darwin  xsyn~.pd_darwin
fftease32-helpfiles/: _clippings.pd  _porting notes.txt.pd  print to message
